--- a/gen/package.json
+++ b/gen/package.json
@@ -7,7 +7,7 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "gridsome": "^0.7.0",
+    "gridsome": "git://github.com/ostwilkens/gridsome.git#gridsome-v0.7.11-gitpkg",
     "gridsome-source-strapi": "^0.1.3"
   }
 }
