--- a/gen/package.json
+++ b/gen/package.json
@@ -9,5 +9,8 @@
   "dependencies": {
     "gridsome": "git://github.com/ostwilkens/gridsome.git#gridsome-v0.7.11-gitpkg",
     "gridsome-source-strapi": "^0.1.3"
+  },
+  "devDependencies": {
+    "gridsome-plugin-tailwind": "0.0.2"
   }
 }
