--- a/gen/package.json
+++ b/gen/package.json
@@ -11,6 +11,8 @@
     "gridsome-source-strapi": "^0.1.3"
   },
   "devDependencies": {
-    "gridsome-plugin-tailwind": "0.0.2"
+    "gridsome-plugin-tailwind": "0.0.2",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0"
   }
 }
