--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
         # build:
         #     context: ./gen
         #     dockerfile: Dockerfile
+        restart: on-failure
         volumes:
             - ./gen:/srv/app
             - /srv/app/node_modules/
