--- a/api/api/blogpost/models/Blogpost.settings.json
+++ b/api/api/blogpost/models/Blogpost.settings.json
@@ -11,7 +11,7 @@
     "comment": ""
   },
   "attributes": {
-    "Title": {
+    "title": {
       "required": true,
       "type": "string"
     },
