--- a/gen/package.json
+++ b/gen/package.json
@@ -7,8 +7,8 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@gridsome/source-strapi": "^0.1.0",
     "gridsome": "git://github.com/ostwilkens/gridsome.git#gridsome-v0.7.11-gitpkg",
-    "gridsome-source-strapi": "^0.1.3",
     "vue-infinite-loading": "^2.4.4"
   },
   "devDependencies": {
